--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "fridgy-back",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "The backend of the fridgy app.",
-  "main": "index.js",
+  "main": "app.js",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SSL-Team/Fridgy-Back.git"
+  },
+  "homepage": "https://github.com/SSL-Team/Fridgy-Back.git#readme",
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.16.0",
+    "dotenv": "^4.0.0",
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.0",
+    "mysql": "^2.13.0",
+    "nodemon": "^1.18.6",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "pg": "6.4.1",
+    "sequelize": "^3.30.1"
   }
 }
