--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "dotenv": "^4.0.0",
+    "eslint": "^5.8.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.0",
