--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "fridgy-back",
+  "name": "backend-starter-code",
   "version": "1.0.0",
-  "description": "The backend of the fridgy app.",
+  "description": "Starter code for an Express/Sequelize backend.",
   "main": "app.js",
-  "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon -L app.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SSL-Team/Fridgy-Back.git"
   },
   "homepage": "https://github.com/SSL-Team/Fridgy-Back.git#readme",
+  "devDependencies": {
+    "nodemon": "^1.18.5",
+    "jest": "^21.2.1"
+  },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.16.0",
-    "dotenv": "^4.0.0",
-    "eslint": "^5.8.0",
-    "express": "^4.14.0",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "eslint": "^5.9.0",
+    "express": "^4.16.1",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.0",
-    "mysql": "^2.13.0",
-    "nodemon": "^1.18.6",
-    "passport": "^0.3.2",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pg": "6.4.1",
-    "sequelize": "^3.30.1"
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.41.0"
   }
 }
