--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,11 @@
 {
     "extends": "airbnb-base",
     "rules": {
-        "linebreak-style":0,
-        "no-console":0
+        "linebreak-style":"off",
+        "no-console":"off",
+        "implicit-arrow-linebreak":"off" 
+    },
+    "settings": {
+
     }
 }
