--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "extends": "airbnb-base",
     "rules": {
         "linebreak-style":"off",
-        "no-console":"off"
+        "no-console":"off",
+        "array-callback-return":"off"
     },
     "settings": {
 
